--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,17 @@ repository = "https://github.com/thechrislee/landbank-viz"
 keywords = ["landbank-viz", "cleveland"]
 authors = ["Chris Lee <chris@noreply.github.com>"]
 
+[tool.poetry.scripts]
+landbank = "landbank_viz.__main__:cli"
+
 [tool.poetry.dependencies]
 python = "^3.10"
+beautifulsoup4 = "^4.11.1"
+typer = "^0.6.1"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
