--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
+black = "^22.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
