--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,13 @@ python = "^3.10"
 beautifulsoup4 = "^4.11.1"
 typer = "^0.6.1"
 requests = "^2.28.1"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
