--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ beautifulsoup4 = "^4.11.1"
 typer = "^0.6.1"
 requests = "^2.28.1"
 loguru = "^0.6.0"
+flet = "^0.1.59"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
