--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.10"
 beautifulsoup4 = "^4.11.1"
 typer = "^0.6.1"
 requests = "^2.28.1"
+gmplot = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
